--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -254,40 +254,49 @@
 							</t>
 						</tr>
 					</thead>
-					<tbody>
-						<tr t-foreach="o.move_lines" t-as="move">
-							<td>
-								<!-- pos no from contract -->
-								<t t-esc="move.eq_pos_no" />
-							</td>
-							<td>
-								<span t-field="move.product_id" />
-							</td>
-							<td id="eq_drawing_number">
-								<span t-field="move.name" />
-							</td>
-							<td class="text-right">
-								<span t-esc="get_qty(move.product_uom_qty, o.partner_id.lang)" />
-								<span t-field="move.product_uom" groups="product.group_uom" />
-							</td>
-							<t t-if="o.picking_type_id.code != 'incoming'">
-								<td>
-									<span t-field="move.location_id" />
-								</td>
+					<tbody>					
+						<t t-foreach="o.sale_layout_lines(picking_id = o.id)" t-as="p">
+						
+							<!-- Name of the category -->
+							<t t-call="equitania.category_template" />
+							
+							<!-- go all category lines through -->
+							<t t-foreach="p['lines']" t-as="move">
+								<tr>
+									<td>
+										<!-- pos no from contract -->
+										<t t-esc="move.eq_pos_no" />
+									</td>
+									<td>
+										<span t-field="move.product_id" />
+									</td>
+									<td id="eq_drawing_number">
+										<span t-field="move.name" />
+									</td>
+									<td class="text-right">
+										<span t-esc="get_qty(move.product_uom_qty, o.partner_id.lang)" />
+										<span t-field="move.product_uom" groups="product.group_uom" />
+									</td>
+									<t t-if="o.picking_type_id.code != 'incoming'">
+										<td>
+											<span t-field="move.location_id" />
+										</td>
+									</t>
+									<td>
+										<span t-if="move.product_id and move.product_id.ean13">
+											<img
+												t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)"
+												style="width:300px;height:50px" />
+										</span>
+									</td>
+									<t t-if="o.picking_type_id.code != 'outgoing'">
+										<td>
+											<span t-field="move.location_dest_id" />
+										</td>
+									</t>
+								</tr>
 							</t>
-							<td>
-								<span t-if="move.product_id and move.product_id.ean13">
-									<img
-										t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)"
-										style="width:300px;height:50px" />
-								</span>
-							</td>
-							<t t-if="o.picking_type_id.code != 'outgoing'">
-								<td>
-									<span t-field="move.location_dest_id" />
-								</td>
-							</t>
-						</tr>
+						</t>
 					</tbody>
 				</table>
 				<div name="invoice_partner"
