--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -324,12 +324,11 @@
 										<t id="eq_drawing_number" />
 										<t t-if="o.state not in ['draft','sent']">
 											<t t-if="o.show_delivery_date">
-												<span class="clearfix">
-													<strong>
-														Delivery date:
-														<span t-field="line.get_delivery_date" />
-													</strong>
-												</span>
+												<div class="clearfix"></div>
+												<strong>
+													Delivery date:
+													<span t-field="line.get_delivery_date" />
+												</strong>
 											</t>
 										</t>
 										<div id="agreement_id" />
