--- a/equitania/views/eq_report_style.xml
+++ b/equitania/views/eq_report_style.xml
@@ -6,6 +6,8 @@
     body {
         color: #000 !important;
         font-size:8pt;
+		font-family: "Open Sans", Calibri, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        
     }
     
     .h2, h2 {
