--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -316,22 +316,25 @@
 										<strong>
 											<span t-field="line.product_id.name" />
 										</strong>
-										<t t-if="line.name and line.name != ' '">
-											<br />
-											<span t-field="line.name" />
-										</t>
-										<!-- Zeigt die Zeichnungsnummer der Produktvariante an -->
-										<t id="eq_drawing_number" />
-										<t t-if="o.state not in ['draft','sent']">
-											<t t-if="o.show_delivery_date">
-												<div class="clearfix"></div>
-												<strong>
-													Delivery date:
-													<span t-field="line.get_delivery_date" />
-												</strong>
+										
+										<div style="width:12cm; margin-right:-12cm; background-color:#ddddff; ">
+											<t t-if="line.name and line.name != ' '">
+												<br />
+												<span t-field="line.name" />
 											</t>
-										</t>
-										<div id="agreement_id" />
+											<!-- Zeigt die Zeichnungsnummer der Produktvariante an -->
+											<t id="eq_drawing_number" />
+											<t t-if="o.state not in ['draft','sent']">
+												<t t-if="o.show_delivery_date">
+													<div class="clearfix"></div>
+													<strong>
+														Delivery date:
+														<span t-field="line.get_delivery_date" />
+													</strong>
+												</t>
+											</t>
+											<div id="agreement_id" />
+										</div>
 									</td>
 									<td class="text-right">
 										<span t-esc="get_qty(line.product_uom_qty, o.partner_id.lang)" />
