--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -321,15 +321,14 @@
 										<div>
 											<span t-field="o.sale_id.partner_invoice_id.street" />
 											<span t-if="o.sale_id.partner_invoice_id.eq_house_no"
-												t-field="o.sale_id.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;" />
+												t-field="o.sale_id.partner_invoice_id.eq_house_no" />
 										</div>
 										<div t-if="o.sale_id.partner_invoice_id.street2">
 											<div t-field="o.sale_id.partner_invoice_id.street2" />
 										</div>
 										<h>
-											<h t-field="o.sale_id.partner_invoice_id.zip" />
-											<h>&#xa0;</h>
-											<h t-field="o.sale_id.partner_invoice_id.city" />
+											<span t-field="o.sale_id.partner_invoice_id.zip" />
+											<span t-field="o.sale_id.partner_invoice_id.city" />
 										</h>
 										<div t-field="o.sale_id.partner_invoice_id.country_id.name" />
 									</div>
@@ -347,19 +346,18 @@
 										<div>
 											<span t-field="o.sale_id.partner_invoice_id.street" />
 											<span t-if="o.sale_id.partner_invoice_id.eq_house_no"
-												t-field="o.sale_id.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;" />
+												t-field="o.sale_id.partner_invoice_id.eq_house_no" />
 										</div>
 										<div t-if="o.sale_id.partner_invoice_id.street2">
 											<div t-field="o.sale_id.partner_invoice_id.street2" />
 										</div>
 										<h>
-											<h t-field="o.sale_id.partner_invoice_id.zip" />
-											<h>&#xa0;</h>
-											<h t-field="o.sale_id.partner_invoice_id.city" />
-											<h t-if="o.sale_id.partner_invoice_id.eq_citypart">
+											<span t-field="o.sale_id.partner_invoice_id.zip" />
+											<span t-field="o.sale_id.partner_invoice_id.city" />
+											<span t-if="o.sale_id.partner_invoice_id.eq_citypart">
 												-
-												<h t-field="o.sale_id.partner_invoice_id.eq_citypart" />
-											</h>
+												<span t-field="o.sale_id.partner_invoice_id.eq_citypart" />
+											</span>
 										</h>
 										<div t-field="o.sale_id.partner_invoice_id.country_id.name" />
 									</div>
