--- a/equitania/views/eq_portal_sale_data.xml
+++ b/equitania/views/eq_portal_sale_data.xml
@@ -4,7 +4,7 @@
     <data noupdate="0">
 
         <!--Email template -->
-        <record id="portal_sale.email_template_edi_sale" model="email.template">
+        <record id="portal_sale.email_template_edi_sale" model="email.template" forcecreate="False">
             <field name="name">Sales Order - Send by Email (Portal)</field>
             <field name="email_from">${(object.user_id.email or '')|safe}</field>
             <field name="subject">${object.company_id.name|safe} ${object.state in ('draft', 'sent') and 'Quotation' or 'Order'} (Ref ${object.name or 'n/a' })</field>
