[CHG] Lieferschein-Anschrift: Wechsel der Positionen von Partner und Kunde in der Anschrift, wenn eine abweichende Lieferanschrift gewählt wurden.

--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -140,12 +140,11 @@
 							<!--<span><strong>Customer Address:</strong></span> -->
 						</div>
 						<div t-if="o.partner_id" name="partner_header">
-							<div t-field="o.partner_id.parent_id.name" style="clear:left;"/>
-							<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2"
-								style="clear:left;" />
 							<span t-field="o.partner_id.title.name" />
 							<span t-field="o.partner_id.eq_firstname" style="clear:left;" />
 							<span t-field="o.partner_id.name" style="clear:left;" />
+							<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2" style="clear:left;" />
+							<div style="clear:left;"><span>c/o</span> <span t-field="o.partner_id.parent_id.name"/></div>
 							<div>
 								<span t-field="o.partner_id.street" />
 								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
