--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -158,6 +158,8 @@
 							<div t-field="o.partner_id.name" style="clear:left;" />
 							<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2"
 								style="clear:left;" />
+							<div t-if="o.partner_id.eq_name3" t-field="o.partner_id.eq_name3"
+								style="clear:left;" />
 							<div>
 								<span t-field="o.partner_id.street" />
 								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
@@ -178,6 +180,8 @@
 						<div t-if="not o.partner_id.is_company">
 							<div t-field="o.partner_id.parent_id.name" style="clear:left;" />
 							<div t-if="o.partner_id.parent_id.eq_name2" t-field="o.partner_id.parent_id.eq_name2"
+								style="clear:left;" />
+							<div t-if="o.partner_id.parent_id.eq_name3" t-field="o.partner_id.parent_id.eq_name3"
 								style="clear:left;" />
 							<span t-field="o.partner_id.title.name" />
 							<span t-field="o.partner_id.eq_firstname" style="clear:left;" />
@@ -632,6 +636,8 @@
 											<div t-field="o.partner_invoice_id.name" style="clear:left;" />
 											<div t-if="o.partner_invoice_id.eq_name2" t-field="o.partner_invoice_id.eq_name2"
 												style="clear:left;" />
+											<div t-if="o.partner_invoice_id.eq_name3" t-field="o.partner_invoice_id.eq_name3"
+												style="clear:left;" />
 											<div>
 												<span t-field="o.partner_invoice_id.street" />
 												<span t-if="o.partner_invoice_id.eq_house_no" t-field="o.partner_invoice_id.eq_house_no" />
@@ -650,6 +656,8 @@
 											<div t-field="o.partner_invoice_id.parent_id.name" style="clear:left;" />
 											<div t-if="o.partner_invoice_id.parent_id.eq_name2"
 												t-field="o.partner_invoice_id.parent_id.eq_name2" style="clear:left;" />
+											<div t-if="o.partner_invoice_id.parent_id.eq_name3"
+												t-field="o.partner_invoice_id.parent_id.eq_name3" style="clear:left;" />
 											<span t-field="o.partner_invoice_id.title.name" />
 											<span t-field="o.partner_invoice_id.eq_firstname" style="clear:left;" />
 											<span t-field="o.partner_invoice_id.name" style="clear:left;" />
@@ -679,6 +687,8 @@
 										<div t-field="o.partner_shipping_id.name" style="clear:left;" />
 										<div t-if="o.partner_shipping_id.eq_name2" t-field="o.partner_shipping_id.eq_name2"
 											style="clear:left;" />
+										<div t-if="o.partner_shipping_id.eq_name3" t-field="o.partner_shipping_id.eq_name3"
+											style="clear:left;" />
 										<div>
 											<span t-field="o.partner_shipping_id.street" />
 											<span t-if="o.partner_shipping_id.eq_house_no" t-field="o.partner_shipping_id.eq_house_no" />
@@ -697,6 +707,8 @@
 									<div t-if="o.partner_shipping_id.type == 'contact'">
 										<div t-if="o.partner_shipping_id.parent_id.name" t-field="o.partner_shipping_id.parent_id.name" style="clear:left;" />
 										<div t-if="o.partner_shipping_id.parent_id.eq_name2" t-field="o.partner_shipping_id.parent_id.eq_name2"
+											style="clear:left;" />
+										<div t-if="o.partner_shipping_id.parent_id.eq_name3" t-field="o.partner_shipping_id.parent_id.eq_name3"
 											style="clear:left;" />
 											<span t-field="o.partner_shipping_id.title.name" />
 											<span t-field="o.partner_shipping_id.eq_firstname" style="clear:left;" />
