--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -144,6 +144,7 @@
 							<span t-field="o.partner_id.eq_firstname" style="clear:left;" />
 							<span t-field="o.partner_id.name" style="clear:left;" />
 							<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2" style="clear:left;" />
+							<div t-if="o.partner_id.eq_name3" t-field="o.partner_id.eq_name3" style="clear:left;" />
 							<div style="clear:left;" t-if="o.partner_id.parent_id.name"><span>c/o</span> <span t-field="o.partner_id.parent_id.name"/></div>
 							<div>
 								<span t-field="o.partner_id.street" />
@@ -325,6 +326,8 @@
 										<div t-field="o.sale_id.partner_invoice_id.name" style="clear:left;" />
 										<div t-if="o.sale_id.partner_invoice_id.eq_name2" t-field="o.sale_id.partner_invoice_id.eq_name2"
 											style="clear:left;" />
+										<div t-if="o.sale_id.partner_invoice_id.eq_name3" t-field="o.sale_id.partner_invoice_id.eq_name3"
+											style="clear:left;" />
 										<div>
 											<span t-field="o.sale_id.partner_invoice_id.street" />
 											<span t-if="o.sale_id.partner_invoice_id.eq_house_no"
@@ -345,6 +348,9 @@
 											style="clear:left;" />
 										<div t-if="o.sale_id.partner_invoice_id.parent_id.eq_name2"
 											t-field="o.sale_id.partner_invoice_id.parent_id.eq_name2"
+											style="clear:left;" />
+										<div t-if="o.sale_id.partner_invoice_id.parent_id.eq_name3"
+											t-field="o.sale_id.partner_invoice_id.parent_id.eq_name3"
 											style="clear:left;" />
 										<span t-field="o.sale_id.partner_invoice_id.title.name" />
 										<span t-field="o.sale_id.partner_invoice_id.eq_firstname"
