--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -33,7 +33,10 @@
 								</td>
 							</tr>
 							<!-- Die Kundenreferenznummer wird auf Auftragszeilenposition angedruckt, welche aus dem Lieferschein gezogen wird -->
-							<!-- <tr t-if="o.eq_ref_number">
+
+							<!-- Auskommentierung von eq_ref_number rausgenommen -->
+
+							<tr t-if="o.eq_ref_number">
 								<td>
 									<span>Your reference no.</span>
 								</td>
@@ -42,7 +45,19 @@
 										<span t-field="o.eq_ref_number" />
 									</div>
 								</td>
+							</tr>
+							<!-- IF-Abfrage wenn eq_ref_number nicht gefüllt, soll o.origin angedruckt werden JE 30.12.2016 -->
+							<!--tr t-if="o.eq_ref_number == ''">
+								<td>
+									<span>Your reference no.</span>
+								</td>
+								<td class="text-right">
+									<div class="referencecontainer">
+										<span t-field="o.origin" />
+									</div>
+								</td>
 							</tr> -->
+
 							<tr>
 								<td>
 									<span>Invoice no.</span>
@@ -639,9 +654,9 @@
 									Term of payment:
 								</td>
 								<td>
-									<!-- 
+									 <!-- QUICK FIX Auskommentierung von "o.payment_term" wieder herausgenommen, da keine Zahlungskondition mehr angezeigt wurde -  Equitania JE 30.12.2016 -->
 									<span t-field="o.payment_term" />
-									 -->		
+
 									<span t-esc="get_eq_payment_terms(o, o.partner_id.lang, o.currency_id)"/>							
 								</td>
 							</tr>
