--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -602,6 +602,10 @@
 							</tbody>
 						</table>
 					</div>
+
+					<!-- Pagebreak before footertext -->
+					<p t-if="o.eq_use_page_break_before_footer" style="page-break-after:always;"> </p>
+
 					<table>
 						<tbody>
 							<tr t-if="o.note">
