--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -637,6 +637,10 @@
 							</tbody>
 						</table>
 					</div>
+
+					<!-- Pagebreak before footertext -->
+					<p t-if="o.eq_use_page_break_before_footer" style="page-break-after:always;"> </p>
+
 					<table>
 						<tbody>
 							<tr t-if="o.comment">
