--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -281,7 +281,11 @@
                     </tbody>
                 </table>
             </div>
-               <table>
+
+            <!-- Pagebreak before footertext -->
+            <p t-if="o.eq_use_page_break_before_footer" style="page-break-after:always;"> </p>
+
+            <table>
                	<tbody>
                        <tr t-if="o.notes">
                            <td styles=" vertical-align:top;">
