[IMP] - Im Auftrag werden nun unter "Rechnungen anzeigen" auch Gutschriften aufgelistet. [FIX] - Report: Der Vor- und Nachname im Lieferscheint wird nur angedruckt, wenn es sich um kein Unternehmen handelt

--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -140,8 +140,10 @@
 							<!--<span><strong>Customer Address:</strong></span> -->
 						</div>
 						<div t-if="o.partner_id" name="partner_header" style="clear:left;">
-							<span t-field="o.partner_id.title.name" />
-							<span t-field="o.partner_id.eq_firstname" style="clear:left;" />
+							<div t-if="o.partner_id.is_company == false">
+								<span t-field="o.partner_id.title.name" />
+								<span t-field="o.partner_id.eq_firstname" style="clear:left;" />
+							</div>
 							<span t-field="o.partner_id.name" style="clear:left;" />
 							<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2" style="clear:left;" />
 							<div t-if="o.partner_id.eq_name3" t-field="o.partner_id.eq_name3" style="clear:left;" />
